--- a/interactcoverletter.html
+++ b/interactcoverletter.html
@@ -185,6 +185,15 @@
                     <span class="text-xs font-medium bg-green-100 text-green-800 px-3 py-1 rounded-full">No personal data is collected or saved</span>
                 </div>
             </div>
+            <div class="mt-6 flex flex-col md:flex-row items-center justify-center md:justify-start space-y-3 md:space-y-0 md:space-x-6 text-gray-500">
+                         <p id="visit-counter" class="text-sm flex items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1.5" viewBox="0 0 20 20" fill="currentColor">
+                              <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+                              <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.022 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+                            </svg>
+                            Anonymous Visits: <span id="visit-count" class="font-semibold ml-1">0</span>
+                          </p>
+                    </div>
         </div>
 
         <div class="w-full max-w-7xl mx-auto lg:grid lg:grid-cols-2 lg:gap-8 lg:items-start">
