Updated Anonymous View Count Logics

--- a/interactcv.html
+++ b/interactcv.html
@@ -238,114 +238,10 @@
             }
         }
     </style>
-
-        <!-- Add Firebase SDKs -->
-	<script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app-compat.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore-compat.js"></script>
-   
-    <script>
-    // Make db variable global
-    let db;
-	// Initialize Firebase with complete config
-    const firebaseConfig = {
-        apiKey: "AIzaSyDPyFt8yhwG8MDO_qqmaYMgE77xYv6u_bc",
-        authDomain: "interactcv-7b41f.firebaseapp.com",
-        projectId: "interactcv-7b41f",
-        storageBucket: "interactcv-7b41f.appspot.com",
-        messagingSenderId: "294550060415",
-        appId: "1:294550060415:web:37bf78cbccafbcaacaae4a"
-    };
-
-        try {
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        console.log('Firebase initialized successfully');
-
-        // Initialize Firestore and assign to global variable
-        db = firebase.firestore();
-        console.log('Firestore initialized successfully');
-
-        // Test Firestore connection
-        db.collection('artifacts/interactcv/public/data/visitCounters').limit(1).get()
-            .then(() => {
-                console.log('Successfully connected to Firestore');
-            })
-            .catch((error) => {
-                console.error('Error connecting to Firestore:', error);
-            });
-
-    } catch (error) {
-        console.error('Error initializing Firebase:', error);
-    }
-    // VisitCounter
-        document.addEventListener('DOMContentLoaded', function() {
-        console.log('DOM Content Loaded - Starting visit counter logic');
-
-        if (typeof firebase === 'undefined' || !db) {
-            console.error('Firebase or Firestore not initialized');
-            return;
-        }
-
-        const visitCountElement = document.getElementById('visit-count');
-        if (!visitCountElement) {
-            console.error('Visit count element not found');
-            return;
-        }
-
-        // Get the current page name
-        const pageName = window.location.pathname.split('/').pop().replace('.html', '') || 'index';
-        console.log('Page name for counter:', pageName);
-
-        // Build the complete path according to Firestore rules
-        const collectionPath = 'artifacts/interactcv/public/data/visitCounters';
-        const counterRef = db.collection(collectionPath).doc(pageName);
-        
-        console.log('Attempting to access counter at path:', counterRef.path);
-
-        // First try to get the current document
-        counterRef.get()
-            .then((doc) => {
-                console.log('Retrieved document. Exists:', doc.exists);
-                if (doc.exists) {
-                    console.log('Current count:', doc.data().count);
-                }
-
-                // Use a transaction for atomic update
-                return db.runTransaction(async (transaction) => {
-                    const freshDoc = await transaction.get(counterRef);
-                    
-                    if (!freshDoc.exists) {
-                        console.log('Creating new counter document with count 1');
-                        transaction.set(counterRef, { count: 1 });
-                        return 1;
-                    }
-
-                    const newCount = (freshDoc.data().count || 0) + 1;
-                    console.log('Updating counter to:', newCount);
-                    transaction.update(counterRef, { count: newCount });
-                    return newCount;
-                });
-            })
-            .then((newCount) => {
-                console.log('Successfully updated counter to:', newCount);
-                visitCountElement.textContent = newCount;
-            })
-            .catch((error) => {
-                console.error("Error with visit counter:", error);
-                console.error("Error details:", {
-                    code: error.code,
-                    message: error.message,
-                    stack: error.stack
-                });
-                visitCountElement.textContent = '?';
-            });
-    });
-
-</script>
-
-
-
+<script src="/assets/js/firebase-config.js"></script>
+<script src="/assets/js/visit-counter-client.js"></script>
 </head>
+
 <body class="antialiased">
 
     <noscript>
