--- a/interactcoverletter.html
+++ b/interactcoverletter.html
@@ -24,6 +24,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 
 <html lang="en">
 <head>
