--- a/interactcv.html
+++ b/interactcv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <title>Interactive CV - Vishal Kondabathini</title>
       <!-- Primary SEO -->
     <meta name="description" content="Interactive CV of Vishal Kondabathini — product & AI leader. Explore experience, projects, skills, recognitions and contact info.">
