--- a/interactimeline.html
+++ b/interactimeline.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Vishal Kondabathini, Digital Transformation, Data Science, AI, Project Management, Pharmaceutical, Novo Nordisk, GN Audio, Sony, Executive MBA, Agile, SAFE, Power BI, Azure, Career Timeline, Interactive CV">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: 'Inter', sans-serif;
