--- a/interactcoverletter.html
+++ b/interactcoverletter.html
@@ -14,13 +14,13 @@
     <meta property="og:description" content="Craft the perfect, ATS-optimized cover letter for any job application. Our free builder guides you section by section to create a professional and compelling letter." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://viskon.github.io/interactcoverletter.html" />
-    <meta property="og:image" content="https://placehold.co/1200x630/eef2f3/8e9eab?text=Cover+Letter%0AGenerator" />
+    <meta property="og:image" content="https://viskon.github.io/assets/metashare.png" />
     <meta property="og:site_name" content="InteractCV Cover Letter Generator" />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Free ATS Optimized Cover Letter Builder">
     <meta name="twitter:description" content="Craft the perfect, ATS-optimized cover letter for any job application. Our free builder guides you section by section to create a professional and compelling letter.">
-    <meta name="twitter:image" content="https://placehold.co/1200x630/eef2f3/8e9eab?text=Cover+Letter%0AGenerator">
+    <meta name="twitter:image" content="https://viskon.github.io/assets/metashare.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
