--- a/interactcv.html
+++ b/interactcv.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Vishal Kondabathini — Interactive CV">
     <meta property="og:description" content="Explore the interactive CV of Vishal Kondabathini: experience, projects, skills, and contact information.">
     <meta property="og:url" content="https://viskon.github.io/interactcv.html">
-    <meta property="og:image" content="https://viskon.github.io/assets/og-interactcv.png">
+    <meta property="og:image" content="https://viskon.github.io/assets/metashare.png" />
     <meta property="og:image:alt" content="Vishal Kondabathini — Interactive CV">
     <meta property="og:type" content="profile">
     <meta property="og:site_name" content="Vishal Kondabathini — InteractCV">
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Vishal Kondabathini — Interactive CV">
     <meta name="twitter:description" content="Interactive CV: experience, projects, skills, and contact information.">
-    <meta name="twitter:image" content="https://viskon.github.io/assets/og-interactcv.png">
+    <meta name="twitter:image" content="https://viskon.github.io/assets/metashare.png">
 
     <!-- Preconnect / Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
