--- a/interactcvgenerator.html
+++ b/interactcvgenerator.html
@@ -16,13 +16,13 @@
     <meta property="og:description" content="Create a stunning, modern resume that stands out. Our free tool helps you build an ATS-friendly interactive CV and cover letter." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://viskon.github.io/interactcvgenerator.html" />
-    <meta property="og:image" content="https://placehold.co/1200x630/e0eafc/003E6B?text=InteractCV%0AGenerator" />
+    <meta property="og:image" content="https://viskon.github.io/assets/metashare.png" />
     <meta property="og:site_name" content="InteractCV Generator" />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Free Interactive CV & Resume Builder | ATS Optimized Generator">
     <meta name="twitter:description" content="Build a professional, ATS-optimized interactive CV for free. Our step-by-step generator helps you create a stunning, modern resume that stands out.">
-    <meta name="twitter:image" content="https://placehold.co/1200x630/e0eafc/003E6B?text=InteractCV%0AGenerator">
+    <meta name="twitter:image" content="https://viskon.github.io/assets/metashare.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
