--- a/interactcvgenerator.html
+++ b/interactcvgenerator.html
@@ -146,7 +146,7 @@
         <div class="container mx-auto px-4 max-w-7xl">
             <div class="flex justify-between items-center py-3">
                 <a href="https://viskon.github.io/interactcvgenerator.html" class="flex items-center space-x-2 text-gray-500 hover:text-indigo-600 transition-colors">
-                    <img src="/assets/favicon.ico" alt="InteractCV home" class="h-6 w-6">
+                    <img src="/assets/logo.png" alt="InteractCV home" class="h-6 w-6">
                     <span class="font-semibold text-lg header-font">InteractCV</span>
                 </a>
                 <div class="flex items-center space-x-4">
