--- a/interactimeline.html
+++ b/interactimeline.html
@@ -141,7 +141,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-3">
                 <a href="https://viskon.github.io/interactcvgenerator.html" class="flex items-center space-x-2 text-gray-500 hover:text-indigo-600 transition-colors">
-                    <img src="/assets/favicon.ico" alt="InteractCV home" class="h-6 w-6">
+                    <img src="/assets/logo.png" alt="InteractCV home" class="h-6 w-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
                     </svg>
                     <span class="font-semibold text-lg">Interactive CV</span>
